Added CSS changes in Login, Register and ProductList

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 }
 
 .container {
+  background-color: #abcff5;
   text-align: center;
   margin: 20px auto;
   width: 500px;
@@ -75,6 +76,13 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+.login:hover {
+  background-color: #022c58;
+  cursor: pointer;
+}
+
+
 
 button:hover {
   background-color: #0056b3;
